--- a/.gitignore
+++ b/.gitignore
@@ -37,4 +37,6 @@ replay_pid*
 /i_fab.ts.adligo.org
 /paths.ts.adligo.org
 /paths_tests.ts.adligo.org
+/strings.ts.adligo.org
+/strings_tests.ts.adligo.org
 /tests4j.ts.adligo.org
